--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
     <!--end nav-->
   </section>
 
-
+  <a href="http://www.freepik.com/free-vector/retro-restaurant-logos-pack_825623.htm">Designed by Freepik</a>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   <script src="Assets/js/jquery-3.3.1.js"></script>
   <script src="Assets/js/bootstrap.min.js"></script>
